fix(Contact): Broken button alignment

--- a/web/src/components/Common/Contact/Contact.module.scss
+++ b/web/src/components/Common/Contact/Contact.module.scss
@@ -93,7 +93,7 @@
   width: 106px;
 }
 
-.ButtonWrapper {
+.SubmitButton {
   text-align: right;
 }
 
